--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,13 @@ aside{
     color: var(--secondary-color);
     font-size: 22px;
 }
+
+.lista__link li:first-of-type a{
+    color: var(--primary-color);
+}
+
+.link__destaque{
+    border: 1px solid var(--primary-color);
+    padding: 12px 30px;
+    border-radius: 8px;
+}
